--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -11,30 +11,28 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
-<body class="dark bg-gray-50 text-gray-800 font-inter transition-colors duration-300">
+<body class="dark font-inter transition-colors duration-300">
     <div class="max-w-6xl mx-auto p-uniform">
         <main>
             <header class="mb-section text-center">
                 <img src="pp.jpg" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto object-cover">
                 <h1
-                    class="text-5xl font-extrabold text-gray-900 bg-gradient-to-r from-gray-900 to-gray-700 bg-clip-text text-transparent mb-2 mt-2">
+                    class="text-5xl font-extrabold bg-gradient-to-r from-gray-100 to-gray-300 bg-clip-text text-transparent mb-2 mt-2 dark-heading">
                     Ahmed Sam Fouad
                 </h1>
-                <p class="text-xl text-gray-600 mb-2">Senior Software Engineer Specializing in HPC, Graphics, Numerics
-                    and AI</p>
-                <p class="text-gray-500 text-sm mb-3">
-                    <a href="mailto:eng.a7med.sam@gmail.com" class="hover:text-gray-700">eng.a7med.sam@gmail.com</a> |
+                <p class="text-xl mb-2">Senior Software Engineer Specializing in HPC, Graphics, Numerics and AI</p>
+                <p class="text-sm mb-3">
+                    <a href="mailto:eng.a7med.sam@gmail.com">eng.a7med.sam@gmail.com</a> |
                     +49 160 57 54 511 |
-                    <a href="https://github.com/A-Sam" class="hover:text-gray-700">github.com/A-Sam</a> |
-                    <a href="https://linkedin.com/in/a-sam-2ab18651"
-                        class="hover:text-gray-700">linkedin.com/in/a-sam-2ab18651</a>
+                    <a href="https://github.com/A-Sam">github.com/A-Sam</a> |
+                    <a href="https://linkedin.com/in/a-sam-2ab18651">linkedin.com/in/a-sam-2ab18651</a>
                 </p>
             </header>
 
-            <section class="bg-white rounded-xl shadow-sm mb-section" style=" margin-top: 2rem;">
-                <h2 class="text-xl font-extrabold text-gray-900 mb-3">Summary</h2>
+            <section class="rounded-xl shadow-sm mb-section" style="margin-top: 2rem;">
+                <h2 class="text-xl font-extrabold mb-3">Summary</h2>
                 <div>
-                    <p class="text-gray-700 mb-3">
+                    <p class="mb-3">
                         9+ years of experience in HPC, Graphics, and AI optimization.
                         Proven expertise in developing high-fidelity render engines, and designing safety-critical
                         automotive architectures and optimizing large AI models for edge computing. Extensive experience
@@ -43,7 +41,7 @@
                         structures and implementing efficient search and compression algorithms.
                     </p>
 
-                    <div class="flex flex-wrap gap-2 text-gray-700">
+                    <div class="flex flex-wrap gap-2">
                         <span class="tag">C++</span>
                         <span class="tag">Python</span>
                         <span class="tag">Qt</span>
@@ -67,14 +65,13 @@
                 </div>
             </section>
 
-            <section id="experience" class="bg-white rounded-xl shadow-sm mb-section">
-                <h2 class="text-xl font-extrabold text-gray-900 mb-3">Experience</h2>
+            <section id="experience" class="rounded-xl shadow-sm mb-section">
+                <h2 class="text-xl font-extrabold mb-3">Experience</h2>
 
                 <div class="space-y-3">
                     <div class="job-entry">
-                        <h3 class="text-lg font-semibold text-gray-900">Senior ML Optimization Engineer / Core AI</h3>
-                        <p class="text-gray-600 italic text-sm">CARIAD, Volkswagen, Munich, Germany | 09/24 - Present |
-                            Full-time</p>
+                        <h3 class="text-lg font-semibold">Senior ML Optimization Engineer / Core AI</h3>
+                        <p class="italic text-sm">CARIAD, Volkswagen, Munich, Germany | 09/24 - Present | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Optimized ONNX models for edge deployment through post-training quantization (PTQ) and
                                 pruning techniques</li>
@@ -99,10 +96,8 @@
                     </div>
 
                     <div class="job-entry">
-                        <h3 class="text-lg font-semibold text-gray-900">Senior Software Engineer / HMI Infotainment
-                            Cluster</h3>
-                        <p class="text-gray-600 italic text-sm">CARIAD, Volkswagen, Munich, Germany | 03/22 - 08/24 |
-                            Full-time</p>
+                        <h3 class="text-lg font-semibold">Senior Software Engineer / HMI Infotainment Cluster</h3>
+                        <p class="italic text-sm">CARIAD, Volkswagen, Munich, Germany | 03/22 - 08/24 | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Architected and implemented robust HMI backend algorithms, optimizing HD complex maps
                                 data processing</li>
@@ -142,9 +137,9 @@
                     </div>
 
                     <div class="job-entry">
-                        <h3 class="text-lg font-semibold text-gray-900">Graduate Research Assistant / ExaHype2</h3>
-                        <p class="text-gray-600 italic text-sm">Technische Universität München, Germany | 04/23 - 12/23
-                            | Part-time</p>
+                        <h3 class="text-lg font-semibold">Graduate Research Assistant / ExaHype2</h3>
+                        <p class="italic text-sm">Technische Universität München, Germany | 04/23 - 12/23 | Part-time
+                        </p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Accelerated ExaHyPE Rusanov solver performance with CUDA-based Euler kernels, profiling
                                 the bandwidth bound problem, achieving near theoretical peak performance</li>
@@ -166,9 +161,8 @@
                     </div>
 
                     <div class="job-entry">
-                        <h3 class="text-lg font-semibold text-gray-900">Software Engineer / ADAS Simulation</h3>
-                        <p class="text-gray-600 italic text-sm">Altran Deutschland, Munich, Germany | 10/18 - 02/22 |
-                            Full-time</p>
+                        <h3 class="text-lg font-semibold">Software Engineer / ADAS Simulation</h3>
+                        <p class="italic text-sm">Altran Deutschland, Munich, Germany | 10/18 - 02/22 | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Co-developed Linux Model Environment (LiME) server for robust ADAS sensor simulation
                             </li>
@@ -195,10 +189,8 @@
                     </div>
 
                     <div class="job-entry">
-                        <h3 class="text-lg font-semibold text-gray-900">Software Engineer / Automotive Steering
-                            Development</h3>
-                        <p class="text-gray-600 italic text-sm">Robert Bosch, Germany/Vietnam | 12/17 - 09/18 |
-                            Full-time</p>
+                        <h3 class="text-lg font-semibold">Software Engineer / Automotive Steering Development</h3>
+                        <p class="italic text-sm">Robert Bosch, Germany/Vietnam | 12/17 - 09/18 | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Developed and deployed functional Auto Steering module with comprehensive SWRE
                                 requirement analysis that is ASIL-D compliant</li>
@@ -221,9 +213,8 @@
                     </div>
 
                     <div class="job-entry">
-                        <h3 class="text-lg font-semibold text-gray-900">Embedded Systems Engineer</h3>
-                        <p class="text-gray-600 italic text-sm">Fpt Software Co., Vietnam | 07/15 - 11/17 | Full-time
-                        </p>
+                        <h3 class="text-lg font-semibold">Embedded Systems Engineer</h3>
+                        <p class="italic text-sm">Fpt Software Co., Vietnam | 07/15 - 11/17 | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Developed lightweight Car Rear View Camera driver</li>
                             <li>Optimized SPI and MCU drivers for iMX6, reducing latency by 10% on baremetal x86_64
@@ -240,8 +231,8 @@
                     </div>
 
                     <div class="job-entry">
-                        <h3 class="text-lg font-semibold text-gray-900">Field Maintenance Engineer</h3>
-                        <p class="text-gray-600 italic text-sm">General Motors, Egypt | 02/15 - 05/15 | Full-time</p>
+                        <h3 class="text-lg font-semibold">Field Maintenance Engineer</h3>
+                        <p class="italic text-sm">General Motors, Egypt | 02/15 - 05/15 | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Maintained plant operations in PLC and developed efficient maintenance plans to reduce
                                 production downtime</li>
@@ -258,36 +249,33 @@
                 </div>
             </section>
 
-            <section id="education" class="bg-white rounded-xl shadow-sm mb-section">
-                <h2 class="text-xl font-extrabold text-gray-900 mb-3">Education</h2>
+            <section id="education" class="rounded-xl shadow-sm mb-section">
+                <h2 class="text-xl font-extrabold mb-3">Education</h2>
                 <div class="space-y-3">
                     <div class="border-l-4 border-blue-500 pl-3">
-                        <h3 class="text-lg font-semibold text-gray-900">M.Sc. Computational Science and Engineering
-                            (Part-time)</h3>
-                        <p class="text-gray-600 italic text-sm">Technical University of Munich, Germany | 10/20 - 09/25
-                            | Grade: 1.7/1.0</p>
-                        <p class="text-gray-700 mt-1">Specialized in HPC, High Dimensional Data Reduction, Deep
-                            Learning, and Scientific Computing</p>
+                        <h3 class="text-lg font-semibold">M.Sc. Computational Science and Engineering (Part-time)</h3>
+                        <p class="italic text-sm">Technical University of Munich, Germany | 10/20 - 09/25 | Grade:
+                            1.7/1.0</p>
+                        <p class="mt-1">Specialized in HPC, High Dimensional Data Reduction, Deep Learning, and
+                            Scientific Computing</p>
                     </div>
                     <div class="border-l-4 border-green-500 pl-3">
-                        <h3 class="text-lg font-semibold text-gray-900">B.Sc. Mechatronics Engineering</h3>
-                        <p class="text-gray-600 italic text-sm">Ain Shams University, Egypt | 09/07 - 06/13 | GPA:
-                            2.7/4.0</p>
-                        <p class="text-gray-700 mt-1">With graduation project GPA of 4.0/4.0.</p>
+                        <h3 class="text-lg font-semibold">B.Sc. Mechatronics Engineering</h3>
+                        <p class="italic text-sm">Ain Shams University, Egypt | 09/07 - 06/13 | GPA: 2.7/4.0</p>
+                        <p class="mt-1">With graduation project GPA of 4.0/4.0.</p>
                     </div>
                     <div class="border-l-4 border-green-500 pl-3">
-                        <h3 class="text-lg font-semibold text-gray-900">Secondary School - Natural Sciences</h3>
-                        <p class="text-gray-600 italic text-sm">Al-Shati Secondary School, Saudi Arabia | 09/04 - 06/07
-                            | GPA: 3.9/4.0</p>
-                        <p class="text-gray-700 mt-1">Graduated with distinction, studied natural and engineering
-                            sciences</p>
+                        <h3 class="text-lg font-semibold">Secondary School - Natural Sciences</h3>
+                        <p class="italic text-sm">Al-Shati Secondary School, Saudi Arabia | 09/04 - 06/07 | GPA: 3.9/4.0
+                        </p>
+                        <p class="mt-1">Graduated with distinction, studied natural and engineering sciences</p>
                     </div>
                 </div>
             </section>
 
-            <section id="languages" class="bg-white rounded-xl shadow-sm">
-                <h2 class="text-xl font-extrabold text-gray-900 mb-3">Languages</h2>
-                <ul class="text-gray-700 list-disc list-inside">
+            <section id="languages" class="rounded-xl shadow-sm">
+                <h2 class="text-xl font-extrabold mb-3">Languages</h2>
+                <ul class="list-disc list-inside">
                     <li>Arabic: Native</li>
                     <li>English: Full fluency (C1.2)</li>
                     <li>German: Upper-Intermediate (B2.1)</li>
@@ -297,15 +285,15 @@
     </div>
 
     <div class="action-buttons">
+        <button id="dark-mode-toggle" class="action-button theme-toggle" title="Toggle Theme">
+            <i class="ri-sun-line light-icon"></i>
+            <i class="ri-moon-line dark-icon"></i>
+        </button>
         <button id="print-button" class="action-button" title="Print CV">
             <i class="ri-printer-line"></i>
         </button>
         <button id="share-button" class="action-button" title="Share CV">
             <i class="ri-share-line"></i>
-        </button>
-        <button id="dark-mode-toggle" class="theme-toggle dark">
-            <i class="ri-sun-line light-icon"></i>
-            <i class="ri-moon-line dark-icon"></i>
         </button>
     </div>
 
@@ -313,11 +301,13 @@
         // Set dark mode by default
         document.addEventListener('DOMContentLoaded', function () {
             // Already set in the HTML class, but ensure it's active
+            document.documentElement.classList.add('dark');
             document.body.classList.add('dark');
             document.getElementById('dark-mode-toggle').classList.add('dark');
         });
 
         document.getElementById('dark-mode-toggle').addEventListener('click', () => {
+            document.documentElement.classList.toggle('dark');
             document.body.classList.toggle('dark');
             document.getElementById('dark-mode-toggle').classList.toggle('dark');
         });
@@ -339,7 +329,6 @@
             } else {
                 // Fallback - copy to clipboard
                 const dummy = document.createElement('input');
-                document.body.appendChild(dummy);
                 document.body.appendChild(dummy);
                 dummy.value = window.location.href;
                 dummy.select();
