--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                         <span class="tag">Github Workflows</span>
                         <span class="tag">Containerization</span>
                         <span class="tag">docker</span>
+                        <span class="tag">html</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">React</span>
                     </div>
                 </div>
             </section>
@@ -214,7 +217,7 @@
 
                     <div class="job-entry">
                         <h3 class="text-lg font-semibold">Embedded Systems Engineer</h3>
-                        <p class="italic text-sm">Fpt Software Co., Vietnam | 07/15 - 11/17 | Full-time</p>
+                        <p class="italic text-sm">Fpt Software Co./Renesas RVC, Vietnam | 07/15 - 11/17 | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Developed lightweight Car Rear View Camera driver</li>
                             <li>Optimized SPI and MCU drivers for iMX6, reducing latency by 10% on baremetal x86_64
@@ -245,6 +248,26 @@
                             <span class="tag">Python</span>
                             <span class="tag">SolidWorks</span>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="projects" class="rounded-xl shadow-sm mb-section">
+                <h2 class="text-xl font-extrabold mb-3">Projects</h2>
+                <div class="job-entry">
+                    <h3 class="text-lg font-semibold">Tab Tag Tree - Chrome Extension</h3>
+                    <p class="italic text-sm">Personal Project | <a
+                            href="https://chromewebstore.google.com/detail/tab-tag-tree/lnlodalopnihdjkilbkpijndkddfoemc"
+                            class="text-blue-600">Chrome Store</a></p>
+                    <ul class="mt-2 text-gray-700 list-disc list-inside">
+                        <li>Chrome extension for efficient tab management using tags and tree structure</li>
+                        <li>Built with TypeScript, React, and Chrome Extension APIs</li>
+                    </ul>
+                    <div class="mt-2 flex flex-wrap gap-2">
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">React</span>
+                        <span class="tag">Chrome API</span>
+                        <span class="tag">SQLite</span>
                     </div>
                 </div>
             </section>
