--- a/index.html
+++ b/index.html
@@ -319,6 +319,9 @@
             <i class="ri-share-line"></i>
         </button>
     </div>
+    <div class="last-updated">
+        <p class="text-sm text-gray-600">Last Update: March 2025</p>
+    </div>
 
     <script>
         // Set dark mode by default
