Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                     +49 160 57 54 511 |
                     <a href="https://github.com/A-Sam">github.com/A-Sam</a> |
                     <a href="https://linkedin.com/in/a-sam-2ab18651">linkedin.com/in/a-sam-2ab18651</a>
+ | 
+ <a href="https://a-sam.github.io/cv</a>
                 </p>
             </header>
 
