--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="https://github.com/A-Sam">github.com/A-Sam</a> |
                     <a href="https://linkedin.com/in/a-sam-2ab18651">linkedin.com/in/a-sam-2ab18651</a>
  | 
- <a href="https://a-sam.github.io/cv</a>
+ <a href="https://a-sam.github.io/cv">Resume</a>
                 </p>
             </header>
 
