--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
         <main>
             <header class="mb-section text-center">
                 <img src="pp.jpg" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto object-cover">
-                <h1
-                    class="text-5xl font-extrabold bg-gradient-to-r from-gray-100 to-gray-300 bg-clip-text text-transparent mb-2 mt-2 dark-heading">
+                <h1 class="text-5xl font-extrabold bg-gradient-to-r from-gray-100 to-gray-300 bg-clip-text text-transparent mb-2 mt-2 dark-heading">
                     Ahmed Sam Fouad
                 </h1>
                 <p class="text-xl mb-2">Senior Software Engineer Specializing in HPC, Graphics, Numerics and AI</p>
-                <p class="text-sm mb-3">
-                    <a href="mailto:eng.a7med.sam@gmail.com">eng.a7med.sam@gmail.com</a> |
-                    +49 160 57 54 511 |
-                    <a href="https://github.com/A-Sam">github.com/A-Sam</a> |
-                    <a href="https://linkedin.com/in/a-sam-2ab18651">linkedin.com/in/a-sam-2ab18651</a>
- | 
- <a href="https://a-sam.github.io/cv">Resume</a>
+                <p class="text-sm mb-3 flex justify-center gap-4 flex-wrap">
+                    <span><i class="fas fa-envelope mr-1"></i><a href="mailto:eng.a7med.sam@gmail.com" title="Email Ahmed Sam Fouad">eng.a7med.sam@gmail.com</a></span>
+                    <span><i class="fas fa-phone mr-1"></i>+49 160 57 54 511</span>
+                    <span><i class="fab fa-github mr-1"></i><a href="https://github.com/A-Sam" title="Ahmed's GitHub Profile">github.com/A-Sam</a></span>
+                    <span><i class="fab fa-linkedin mr-1"></i><a href="https://linkedin.com/in/a-sam-2ab18651" title="Ahmed's LinkedIn Profile">linkedin.com/in/a-sam-2ab18651</a></span>
+                    <span><i class="fas fa-file-alt mr-1"></i><a href="https://a-sam.github.io/cv" title="View Ahmed's Resume">Resume</a></span>
                 </p>
             </header>
 
