--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 </h1>
                 <p class="text-xl mb-2">Senior Software Engineer Specializing in HPC, Graphics, Numerics and AI</p>
                 <p class="text-sm mb-3 flex justify-center gap-4 flex-wrap">
-                    <span><i class="fas fa-envelope mr-1"></i><a href="mailto:eng.a7med.sam@gmail.com" title="Email Ahmed Sam Fouad">eng.a7med.sam@gmail.com</a></span>
+                    <span><i class="fas fa-envelope mr-1"></i><a href="mailto:eng.a7med.sam@gmail.com" title="Email">Email</a></span>
                     <span><i class="fas fa-phone mr-1"></i>+49 160 57 54 511</span>
-                    <span><i class="fab fa-github mr-1"></i><a href="https://github.com/A-Sam" title="Ahmed's GitHub Profile">github.com/A-Sam</a></span>
-                    <span><i class="fab fa-linkedin mr-1"></i><a href="https://linkedin.com/in/a-sam-2ab18651" title="Ahmed's LinkedIn Profile">linkedin.com/in/a-sam-2ab18651</a></span>
-                    <span><i class="fas fa-file-alt mr-1"></i><a href="https://a-sam.github.io/cv" title="View Ahmed's Resume">Resume</a></span>
+                    <span><i class="fab fa-github mr-1"></i><a href="https://github.com/A-Sam" title="GitHub">Github</a></span>
+                    <span><i class="fab fa-linkedin mr-1"></i><a href="https://linkedin.com/in/a-sam-2ab18651" title="LinkedIn">LinkedIn</a></span>
+                    <span><i class="fas fa-file-alt mr-1"></i><a href="https://a-sam.github.io/cv" title="Resume">Resume</a></span>
                 </p>
             </header>
 
