--- a/index.html
+++ b/index.html
@@ -14,24 +14,32 @@
 <body class="dark font-inter transition-colors duration-300">
     <div class="max-w-6xl mx-auto p-uniform">
         <main>
-            <header class="mb-section text-center">
-                <img src="pp.jpg" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto object-cover">
-                <h1
-                    class="text-5xl font-extrabold bg-gradient-to-r from-gray-100 to-gray-300 bg-clip-text text-transparent mb-2 mt-2 dark-heading">
-                    Ahmed Sam Fouad
-                </h1>
-                <p class="text-xl mb-2">Senior Software Engineer Specializing in HPC, Graphics, Numerics and AI</p>
-                <p class="text-sm mb-3">
-                    <a href="mailto:eng.a7med.sam@gmail.com">eng.a7med.sam@gmail.com</a> |
-                    +49 160 57 54 511 |
-                    <a href="https://github.com/A-Sam">github.com/A-Sam</a> |
-                    <a href="https://linkedin.com/in/a-sam-2ab18651">linkedin.com/in/a-sam-2ab18651</a>
- | 
- <a href="https://a-sam.github.io/cv">Resume</a>
-                </p>
-            </header>
+	<header style="text-align: center;">
+	    <img src="img/pp.jpg" alt="Profile Picture" style="width: 8rem; height: 8rem; border-radius: 50%; margin: 0 auto; object-fit: cover;">
+	    <h1 style="font-size: 3rem; font-weight: 800; background: linear-gradient(to right, #f3f4f6, #d1d5db); -webkit-background-clip: text; background-clip: text; color: transparent; margin-bottom: 0.5rem; margin-top: 0.5rem;">
+		Ahmed Sam Fouad
+	    </h1>
+	    <p style="font-size: 1.25rem; margin-bottom: 0rem; margin-top:0;">Senior Software Engineer | HPC, Graphics, Numerics, AI</p>
+	    <div style="display: flex; justify-content: center; gap: 1.5rem; font-size: 0.875rem; padding:0.1rem; height: 1.5rem; margin-bottom: 1rem">
+		<a href="mailto:eng.a7med.sam@gmail.com" title="Email" class="tag"  style="display: flex; align-items: center; gap: 0.25rem; text-decoration: none; color: inherit;">
+		    <img src="img/gmail.png" alt="Email Icon" style="width: 1.25rem; height: 1.25rem;"> Email
+		</a>
+		<a title="Phone" class="tag"  style="display: flex; align-items: center; gap: 0.25rem; text-decoration: none; color: inherit;">
+		    <img src="img/mobile.png" alt="PhoneIcon"style="width: 1.25rem; height: 1.25rem;"> +49 160 57 54 511
+		</a>
+		<a href="https://github.com/A-Sam" title="GitHub"  class="tag" style="display: flex; align-items: center; gap: 0.25rem; text-decoration: none; color: inherit;">
+		    <img src="img/github.png" alt="GitHub Icon" style="width: 1.25rem; height: 1.25rem;"> GitHub
+		</a>
+		<a href="https://www.linkedin.com/in/ahmed-sam-2ab18651" title="LinkedIn"  class="tag" style="display: flex; align-items: center; gap: 0.25rem; text-decoration: none; color: inherit;">
+		    <img src="img/linkedin.png" alt="LinkedIn Icon" style="width: 1.25rem; height: 1.25rem;"> LinkedIn
+		</a>
+		<a href="https://a-sam.github.io/cv" title="Online Resume"  class="tag" style="display: flex; align-items: center; gap: 0.25rem; text-decoration: none; color: inherit;">
+		    <img src="img/resume.png" alt="Resume Icon" style="width: 1.25rem; height: 1.25rem;"> Resume
+		</a>
+	    </div>
+	</header>
 
-            <section class="rounded-xl shadow-sm mb-section" style="margin-top: 2rem;">
+            <section class="rounded-xl shadow-sm mb-section">
                 <h2 class="text-xl font-extrabold mb-3">Summary</h2>
                 <div>
                     <p class="mb-3">
