--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         automotive architectures and optimizing large AI models for edge computing. Extensive experience
                         in multi-core/multi-node simulations
                         and high-performance communication systems, with strong focus on optimizing complex data
-                        structures and implementing efficient search and compression algorithms.
+                        structures, building scalable databases, and implementing efficient search and compression algorithms.
                     </p>
 
                     <div class="flex flex-wrap gap-2">
@@ -73,8 +73,12 @@
                         <span class="tag">CUDA</span>
                         <span class="tag">OpenMP</span>
                         <span class="tag">MPI</span>
-                        <span class="tag">AVX SIMD</span>
+                        <span class="tag">SIMD</span>
+                        <span class="tag">AVX Intrinsics</span>
                         <span class="tag">Qualcomm HTP</span>
+                        <span class="tag">TensorFlow</span>
+                        <span class="tag">Pytorch</span>
+                        <span class="tag">ONNX</span>
                         <span class="tag">OpenGL</span>
                         <span class="tag">HPC</span>
                         <span class="tag">ADAS</span>
@@ -83,11 +87,12 @@
                         <span class="tag">CI/CD</span>
                         <span class="tag">Jenkins</span>
                         <span class="tag">Github Workflows</span>
-                        <span class="tag">Containerization</span>
+                        <span class="tag">Microservices</span>
                         <span class="tag">docker</span>
-                        <span class="tag">html</span>
-                        <span class="tag">CSS</span>
                         <span class="tag">React</span>
+                        <span class="tag">SQLite</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
                     </div>
                 </div>
             </section>
@@ -112,13 +117,16 @@
                                 optimization</li>
                         </ul>
                         <div class="mt-2 flex flex-wrap gap-2">
-                            <span class="tag">C++</span>
+                            <span class="tag">C++17/20</span>
+                            <span class="tag">Python</span>
                             <span class="tag">Assembly</span>
                             <span class="tag">VLIW</span>
                             <span class="tag">QNN</span>
                             <span class="tag">CUDA</span>
                             <span class="tag">ONNX</span>
                             <span class="tag">Qualcomm HTP</span>
+                            <span class="tag">TensorFlow</span>
+                            <span class="tag">Pytorch</span>
                         </div>
                     </div>
 
@@ -148,7 +156,7 @@
                                 WSL2 and docker devcontainers</li>
                         </ul>
                         <div class="mt-2 flex flex-wrap gap-2">
-                            <span class="tag">C++17</span>
+                            <span class="tag">C++14/17</span>
                             <span class="tag">QT</span>
                             <span class="tag">AOS</span>
                             <span class="tag">ROS</span>
@@ -160,6 +168,7 @@
                             <span class="tag">JS</span>
                             <span class="tag">React</span>
                             <span class="tag">Jinja2</span>
+                            <span class="tag">Python</span>
                         </div>
                     </div>
 
@@ -172,12 +181,10 @@
                                 the bandwidth bound problem, achieving near theoretical peak performance</li>
                             <li>Improved GPU offloading efficiency for complex grid geometries using CUDA</li>
                             <li>Achieved a 28x speedup over baseline OpenMP implementations</li>
-                            <li><a href="https://mediatum.ub.tum.de/doc/1726231/fmn8ps2ehx36eu7aum6ia8o94.GR_CUDA_SS23_AhmedFouad.pdf"
-                                    target="_blank" class="text-blue-600 hover:underline">Optimizing GPU Offloading with
-                                    CUDA for a Patch-based Hyperbolic Finite Volume Solver in ExaHyPE</a></li>
                         </ul>
                         <div class="mt-2 flex flex-wrap gap-2">
                             <span class="tag">C++20</span>
+                            <span class="tag">Python</span>
                             <span class="tag">OpenMP</span>
                             <span class="tag">CUDA</span>
                             <span class="tag">Perf</span>
@@ -229,6 +236,7 @@
                         </ul>
                         <div class="mt-2 flex flex-wrap gap-2">
                             <span class="tag">C</span>
+                            <span class="tag">C++99/14</span>
                             <span class="tag">Assembly</span>
                             <span class="tag">Qt</span>
                             <span class="tag">Canoe</span>
@@ -292,6 +300,24 @@
                         <span class="tag">React</span>
                         <span class="tag">Chrome API</span>
                         <span class="tag">SQLite</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
+                    </div>
+                </div>
+            </section>
+
+            <section id="projects" class="rounded-xl shadow-sm mb-section">
+                <h2 class="text-xl font-extrabold mb-3">Publications</h2>
+                <div class="job-entry">
+                    <h3 class="text-lg font-semibold">Guided Research</h3>
+                    <p class="italic text-sm">TUM | <a
+                            href="https://mediatum.ub.tum.de/doc/1726231/fmn8ps2ehx36eu7aum6ia8o94.GR_CUDA_SS23_AhmedFouad.pdf"
+                                    target="_blank" class="text-blue-600 hover:underline"
+                            class="text-blue-600">Optimizing GPU Offloading with CUDA for a Patch-based Hyperbolic Finite Volume Solver in ExaHyPE</a></p>
+                    <div class="mt-2 flex flex-wrap gap-2">
+                        <span class="tag">CUDA</span>
+                        <span class="tag">PTX</span>
+                        <span class="tag">Microbenshmarking</span>
                     </div>
                 </div>
             </section>
