--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
                             <span class="tag">Qualcomm HTP</span>
                             <span class="tag">TensorFlow</span>
                             <span class="tag">Pytorch</span>
+                            <span class="tag">Microbenchmarking</span>
+                            <span class="tag">CNN Vision Models</span>
                         </div>
                     </div>
 
@@ -317,7 +319,7 @@
                     <div class="mt-2 flex flex-wrap gap-2">
                         <span class="tag">CUDA</span>
                         <span class="tag">PTX</span>
-                        <span class="tag">Microbenshmarking</span>
+                        <span class="tag">Microbenchmarking</span>
                     </div>
                 </div>
             </section>
