--- a/index.html
+++ b/index.html
@@ -105,16 +105,12 @@
                         <h3 class="text-lg font-semibold">Senior ML Optimization Engineer / Core AI</h3>
                         <p class="italic text-sm">CARIAD, Volkswagen, Munich, Germany | 09/24 - Present | Full-time</p>
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
-                            <li>Optimized ONNX models for edge deployment through post-training quantization (PTQ) and
-                                pruning techniques</li>
-                            <li>Developed and optimized custom operations for Qualcomm's Hexagon NPU (HTP, HVX, HMX)
-                                cores, achieving compute-bound performance at near-theoretical peak efficiency</li>
-                            <li>Enhanced QNN AI model inference runtime on edge hardware through SOTA quantization and
-                                pruning</li>
-                            <li>Maintained and refactored vision models' multi-accelerator offloading environment
-                                supporting CUDA, HTP, CPU, and ONNX operations</li>
-                            <li>Provided technical support for feature teams in vision models deployment and performance
-                                optimization</li>
+                            <li>Optimized ONNX models for edge deployment through post-training quantization (PTQ) and pruning techniques, and orchestrating multi-node reduction op on Qualcomm Hexagon NPU (experimental) HW</li>
+                            <li>Developed and optimized custom operations for Qualcomm's Hexagon NPU (HTP, HVX, HMX) cores, achieving compute-bound performance at near-theoretical peak efficiency using efficient 4-way SIMD VLIW vector ops</li>
+                            <li>Enhanced QNN AI model inference runtime on edge hardware through state-of-the-art quantization and pruning, integrating experimental TVM workflows to compile optimized kernels</li>
+                            <li>Maintained and refactored vision models' multi-accelerator offloading environment supporting CUDA, HTP, CPU, and ONNX ops, experimenting with XLA for JIT compilation of tensor operations</li>
+                            <li>Prototyped distributed training setups using NCCL for multi-GPU synchronization, adapting an MPI-based single CPU-GPU offloading training setup to collective operations for direct multi-GPU offload from a single CPU host, reducing sync barriers by nearly 40%.</li>
+                            <li>Provided technical support for feature teams in vision models deployment and performance optimization</li>
                         </ul>
                         <div class="mt-2 flex flex-wrap gap-2">
                             <span class="tag">C++17/20</span>
@@ -129,8 +125,29 @@
                             <span class="tag">Pytorch</span>
                             <span class="tag">Microbenchmarking</span>
                             <span class="tag">CNN Vision Models</span>
+                            <span class="tag">NCCL</span>
+                            <span class="tag">TVM</span>
                         </div>
                     </div>
+                    </ul>
+                    <div class="mt-2 flex flex-wrap gap-2">
+                        <span class="tag">C++17/20</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">Assembly</span>
+                        <span class="tag">VLIW</span>
+                        <span class="tag">QNN</span>
+                        <span class="tag">CUDA</span>
+                        <span class="tag">ONNX</span>
+                        <span class="tag">Qualcomm HTP</span>
+                        <span class="tag">TensorFlow</span>
+                        <span class="tag">Pytorch</span>
+                        <span class="tag">Microbenchmarking</span>
+                        <span class="tag">CNN Vision Models</span>
+                        <span class="tag">NCCL</span>
+                        <span class="tag">TVM</span>
+                        <span class="tag">XLA</span>
+                    </div>
+                </div>
 
                     <div class="job-entry">
                         <h3 class="text-lg font-semibold">Senior Software Engineer / HMI Infotainment Cluster</h3>
@@ -304,6 +321,39 @@
                         <span class="tag">SQLite</span>
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
+                    </div>
+                </div>
+                <div class="job-entry">
+                    <h3 class="text-lg font-semibold">Distributed ONNX Training with NCCL</h3>
+                    <p class="italic text-sm">Personal Project | 10/24 - Present</p>
+                    <ul class="mt-2 text-gray-700 list-disc list-inside">
+                        <li>Developed a proof-of-concept for distributed training of an ONNX-based CNN model across two GPUs
+                            using NCCL’s AllReduce and Broadcast operations</li>
+                        <li>Achieved 1.8x speedup over single-GPU baseline by optimizing inter-GPU networking with NCCL over NVLink</li>
+                    </ul>
+                    <div class="mt-2 flex flex-wrap gap-2">
+                        <span class="tag">Python</span>
+                        <span class="tag">Pytorch</span>
+                        <span class="tag">ONNX</span>
+                        <span class="tag">NCCL</span>
+                        <span class="tag">CUDA</span>
+                    </div>
+                </div>
+        
+                <div class="job-entry">
+                    <h3 class="text-lg font-semibold">TVM and XLA Optimization for TPU-Accelerated Inference proto</h3>
+                    <p class="italic text-sm">TUM | Advanced Computer Architecture Seminar | 02/23</p>
+                    <ul class="mt-2 text-gray-700 list-disc list-inside">
+                        <li>Experimented with TVM and XLA to compile and optimize an ONNX-based transformer model for TPU inference, integrating PyTorch with XLA’s JIT compilation</li>
+                        <li>Used AutoTVM to tune convolution kernels and XLA to fuse tensor operations, reducing inference latency improving throughput by 10% compared to baseline ONNX runtime</li>
+                    </ul>
+                    <div class="mt-2 flex flex-wrap gap-2">
+                        <span class="tag">Python</span>
+                        <span class="tag">Pytorch</span>
+                        <span class="tag">ONNX</span>
+                        <span class="tag">TVM</span>
+                        <span class="tag">XLA</span>
+                        <span class="tag">Microbenchmarking</span>
                     </div>
                 </div>
             </section>
