--- a/index.html
+++ b/index.html
@@ -304,56 +304,58 @@
             </section>
 
             <section id="projects" class="rounded-xl shadow-sm mb-section">
-                <h2 class="text-xl font-extrabold mb-3">Projects</h2>
-                <div class="job-entry">
-                    <h3 class="text-lg font-semibold">Tab Tag Tree - Chrome Extension</h3>
-                    <p class="italic text-sm">Personal Project | <a
-                            href="https://chromewebstore.google.com/detail/tab-tag-tree/lnlodalopnihdjkilbkpijndkddfoemc"
-                            class="text-blue-600">Chrome Store</a></p>
-                    <ul class="mt-2 text-gray-700 list-disc list-inside">
-                        <li>Chrome extension for efficient tab management using tags and tree structure</li>
-                        <li>Built with TypeScript, React, and Chrome Extension APIs</li>
-                    </ul>
-                    <div class="mt-2 flex flex-wrap gap-2">
-                        <span class="tag">JavaScript</span>
-                        <span class="tag">React</span>
-                        <span class="tag">Chrome API</span>
-                        <span class="tag">SQLite</span>
-                        <span class="tag">HTML</span>
-                        <span class="tag">CSS</span>
+                <div class="max-w-6xl mx-auto p-uniform">
+                    <h2 class="text-xl font-extrabold mb-3">Projects</h2>
+                    <div class="job-entry">
+                        <h3 class="text-lg font-semibold">Tab Tag Tree - Chrome Extension</h3>
+                        <p class="italic text-sm">Personal Project | <a
+                                href="https://chromewebstore.google.com/detail/tab-tag-tree/lnlodalopnihdjkilbkpijndkddfoemc"
+                                class="text-blue-600">Chrome Store</a></p>
+                        <ul class="mt-2 text-gray-700 list-disc list-inside">
+                            <li>Chrome extension for efficient tab management using tags and tree structure</li>
+                            <li>Built with TypeScript, React, and Chrome Extension APIs</li>
+                        </ul>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">React</span>
+                            <span class="tag">Chrome API</span>
+                            <span class="tag">SQLite</span>
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                        </div>
                     </div>
-                </div>
-                <div class="job-entry">
-                    <h3 class="text-lg font-semibold">Distributed ONNX Training with NCCL</h3>
-                    <p class="italic text-sm">Personal Project | 10/24 - Present</p>
-                    <ul class="mt-2 text-gray-700 list-disc list-inside">
-                        <li>Developed a proof-of-concept for distributed training of an ONNX-based CNN model across two GPUs
-                            using NCCL’s AllReduce and Broadcast operations</li>
-                        <li>Achieved 1.8x speedup over single-GPU baseline by optimizing inter-GPU networking with NCCL over NVLink</li>
-                    </ul>
-                    <div class="mt-2 flex flex-wrap gap-2">
-                        <span class="tag">Python</span>
-                        <span class="tag">Pytorch</span>
-                        <span class="tag">ONNX</span>
-                        <span class="tag">NCCL</span>
-                        <span class="tag">CUDA</span>
+                    <div class="job-entry">
+                        <h3 class="text-lg font-semibold">Distributed ONNX Training with NCCL</h3>
+                        <p class="italic text-sm">Personal Project | 10/24 - Present</p>
+                        <ul class="mt-2 text-gray-700 list-disc list-inside">
+                            <li>Developed a proof-of-concept for distributed training of an ONNX-based CNN model across two GPUs
+                                using NCCL’s AllReduce and Broadcast operations</li>
+                            <li>Achieved 1.8x speedup over single-GPU baseline by optimizing inter-GPU networking with NCCL over NVLink</li>
+                        </ul>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span class="tag">Python</span>
+                            <span class="tag">Pytorch</span>
+                            <span class="tag">ONNX</span>
+                            <span class="tag">NCCL</span>
+                            <span class="tag">CUDA</span>
+                        </div>
                     </div>
-                </div>
-        
-                <div class="job-entry">
-                    <h3 class="text-lg font-semibold">TVM and XLA Optimization for TPU-Accelerated Inference proto</h3>
-                    <p class="italic text-sm">TUM | Advanced Computer Architecture Seminar | 02/23</p>
-                    <ul class="mt-2 text-gray-700 list-disc list-inside">
-                        <li>Experimented with TVM and XLA to compile and optimize an ONNX-based transformer model for TPU inference, integrating PyTorch with XLA’s JIT compilation</li>
-                        <li>Used AutoTVM to tune convolution kernels and XLA to fuse tensor operations, reducing inference latency improving throughput by 10% compared to baseline ONNX runtime</li>
-                    </ul>
-                    <div class="mt-2 flex flex-wrap gap-2">
-                        <span class="tag">Python</span>
-                        <span class="tag">Pytorch</span>
-                        <span class="tag">ONNX</span>
-                        <span class="tag">TVM</span>
-                        <span class="tag">XLA</span>
-                        <span class="tag">Microbenchmarking</span>
+            
+                    <div class="job-entry">
+                        <h3 class="text-lg font-semibold">TVM and XLA Optimization for TPU-Accelerated Inference proto</h3>
+                        <p class="italic text-sm">TUM | Advanced Computer Architecture Seminar | 02/23</p>
+                        <ul class="mt-2 text-gray-700 list-disc list-inside">
+                            <li>Experimented with TVM and XLA to compile and optimize an ONNX-based transformer model for TPU inference, integrating PyTorch with XLA’s JIT compilation</li>
+                            <li>Used AutoTVM to tune convolution kernels and XLA to fuse tensor operations, reducing inference latency improving throughput by 10% compared to baseline ONNX runtime</li>
+                        </ul>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span class="tag">Python</span>
+                            <span class="tag">Pytorch</span>
+                            <span class="tag">ONNX</span>
+                            <span class="tag">TVM</span>
+                            <span class="tag">XLA</span>
+                            <span class="tag">Microbenchmarking</span>
+                        </div>
                     </div>
                 </div>
             </section>
